2009-03-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: arkadini

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Handle files disappearing from the cache directory while we're
	estimating cache usage. Fixes #1255.

2009-03-20  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: arkadini

	* flumotion/component/misc/httpserver/ratecontrol.py:
	Prevent proxying pauseProducing calls to producers that have already
	disconnected. Fixes #1256.

2009-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/common.py: Now stone age compatible, too!

2009-03-18  Arek Korbik  <arkadini@gmail.com>

	* flumotion/test/test_pb.py (TestTwisted_PortalAuthChallenger):
	_PortalAuthChallenger's __init__() signature changed in Twisted
	8.0 - mark those tests as 'skip' for now.

	* flumotion/test/test_icalbouncer.py: Fix for the compatibility
	breakage in dateutil 1.4; clean-up after ourselves, too.

	* flumotion/test/common.py:
	* flumotion/test/Makefile.am:
	New module for small utilities like haveTwisted().

2009-03-18  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jlegoff

	* flumotion/scenario/steps/conversionsteps.py:
	Controll whether a muxer can or cannot be shown on the wizard
	depending on the configured media types (audio/video) and the ones it
	accepts.
	Helps #2074(pt)

2009-03-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* data/cortado-template.html:
	* flumotion/component/plugs/cortado/cortado.py:
	* flumotion/component/plugs/cortado/cortado.xml:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	Framerate is no longer used on cortado, setting it to optional for
	compatibility reasons but not using it anymore.
	* flumotion/component/producers/webcam/wizard_gtk.py:
	Convert the framerate to a float instead of using a string.
	Fixes #970

2009-03-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: murrayc

	* data/glade/welcome-wizard.glade:
	Add a notice for the user about the safety of using the default